--- a/voiceraFace/FaceMoustacheSetView/View/FaceEditorViewController.xib
+++ b/voiceraFace/FaceMoustacheSetView/View/FaceEditorViewController.xib
@@ -2,14 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FaceEditorViewController" customModule="voicera" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FaceEditorViewController" customModule="voiceraFace" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="bYw-nI-bnb" id="YEi-fr-i1c"/>
                 <outlet property="sceneView" destination="82F-JW-zzH" id="laU-FA-u6u"/>
@@ -26,7 +25,7 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bYw-nI-bnb">
-                    <rect key="frame" x="0.0" y="668" width="393" height="75"/>
+                    <rect key="frame" x="16" y="668" width="361" height="75"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="75" id="qgQ-vp-1h0"/>
@@ -45,10 +44,10 @@
                 <constraint firstItem="82F-JW-zzH" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="MIb-7d-j6h"/>
                 <constraint firstItem="82F-JW-zzH" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="e15-EG-JVj"/>
                 <constraint firstAttribute="bottom" secondItem="82F-JW-zzH" secondAttribute="bottom" id="fdW-Co-7Ak"/>
-                <constraint firstItem="bYw-nI-bnb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="fq8-yv-Loq"/>
+                <constraint firstItem="bYw-nI-bnb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="fq8-yv-Loq"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="bYw-nI-bnb" secondAttribute="bottom" constant="75" id="ijH-zt-8aq"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="82F-JW-zzH" secondAttribute="trailing" id="jW5-Bu-pCb"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="bYw-nI-bnb" secondAttribute="trailing" id="pPF-kT-pCn"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="bYw-nI-bnb" secondAttribute="trailing" constant="16" id="pPF-kT-pCn"/>
             </constraints>
             <point key="canvasLocation" x="48" y="20"/>
         </view>
