--- a/voiceraFace/FaceMoustacheSetView/View/FaceEditorViewController.xib
+++ b/voiceraFace/FaceMoustacheSetView/View/FaceEditorViewController.xib
@@ -13,7 +13,7 @@
                 <outlet property="collectionView" destination="bYw-nI-bnb" id="YEi-fr-i1c"/>
                 <outlet property="recordImage" destination="iwX-hC-oas" id="ewg-Os-GEU"/>
                 <outlet property="rotateCameraImage" destination="r14-Xm-y8i" id="6TU-4r-xKE"/>
-                <outlet property="sceneView" destination="82F-JW-zzH" id="laU-FA-u6u"/>
+                <outlet property="sceneView" destination="82F-JW-zzH" id="nMm-hv-k6g"/>
                 <outlet property="timeLabel" destination="1gh-GU-ex2" id="usX-b0-RQw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="82F-JW-zzH">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="82F-JW-zzH" customClass="ARSCNView">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                     <subviews>
                         <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="55l-FE-9wj">
