--- a/voiceraFace/FaceMoustacheSetView/View/FaceEditorViewController.xib
+++ b/voiceraFace/FaceMoustacheSetView/View/FaceEditorViewController.xib
@@ -54,7 +54,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="75" id="qgQ-vp-1h0"/>
                     </constraints>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oRp-eE-YyC">
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oRp-eE-YyC">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -76,7 +76,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gh-GU-ex2">
-                    <rect key="frame" x="159" y="413" width="75" height="25"/>
+                    <rect key="frame" x="159" y="65" width="75" height="25"/>
                     <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="75" id="pff-8i-oCG"/>
