--- a/voiceraFace/RecordingGridView/View/RecordGridCell/RecordingGridCollectionViewCell.xib
+++ b/voiceraFace/RecordingGridView/View/RecordGridCell/RecordingGridCollectionViewCell.xib
@@ -3,22 +3,99 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RecordingGridCollectionViewCell" customModule="voiceraFace" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="244" height="94"/>
+            <rect key="frame" x="0.0" y="0.0" width="110" height="119"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="244" height="94"/>
+                <rect key="frame" x="0.0" y="0.0" width="110" height="119"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lsf-45-VF5">
+                        <rect key="frame" x="0.0" y="0.0" width="110" height="119"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vxm-NB-pA2">
+                                <rect key="frame" x="0.0" y="0.0" width="110" height="79"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wJ-Pi-tgO">
+                                <rect key="frame" x="5" y="84" width="35" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JsZ-Vx-rgu">
+                                <rect key="frame" x="60" y="58" width="42" height="21"/>
+                                <color key="backgroundColor" systemColor="secondaryLabelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gLl-vS-ehx">
+                                <rect key="frame" x="45" y="84" width="60" height="30"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="9TW-rU-72a"/>
+                                    <constraint firstAttribute="height" constant="30" id="EAL-nK-0Ab"/>
+                                </constraints>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Edit"/>
+                                <connections>
+                                    <action selector="editButtontapped:" destination="gTV-IL-0wX" eventType="touchUpInside" id="rhf-Am-0Ny"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Vxm-NB-pA2" firstAttribute="top" secondItem="lsf-45-VF5" secondAttribute="top" id="Cm8-rB-zgH"/>
+                            <constraint firstItem="gLl-vS-ehx" firstAttribute="leading" secondItem="3wJ-Pi-tgO" secondAttribute="trailing" constant="5" id="NUa-xH-3Eu"/>
+                            <constraint firstItem="gLl-vS-ehx" firstAttribute="top" secondItem="Vxm-NB-pA2" secondAttribute="bottom" constant="5" id="PD8-av-EOd"/>
+                            <constraint firstAttribute="bottom" secondItem="3wJ-Pi-tgO" secondAttribute="bottom" constant="5" id="aj5-oX-uN9"/>
+                            <constraint firstAttribute="trailing" secondItem="gLl-vS-ehx" secondAttribute="trailing" constant="5" id="c3h-Oj-Pyr"/>
+                            <constraint firstItem="3wJ-Pi-tgO" firstAttribute="leading" secondItem="lsf-45-VF5" secondAttribute="leading" constant="5" id="evH-X7-p1O"/>
+                            <constraint firstItem="3wJ-Pi-tgO" firstAttribute="top" secondItem="JsZ-Vx-rgu" secondAttribute="bottom" constant="5" id="gAO-V8-aWl"/>
+                            <constraint firstAttribute="bottom" secondItem="gLl-vS-ehx" secondAttribute="bottom" constant="5" id="iTy-8g-xhO"/>
+                            <constraint firstAttribute="trailing" secondItem="Vxm-NB-pA2" secondAttribute="trailing" id="mXz-3H-DaR"/>
+                            <constraint firstItem="3wJ-Pi-tgO" firstAttribute="top" secondItem="Vxm-NB-pA2" secondAttribute="bottom" constant="5" id="pZr-h9-7f7"/>
+                            <constraint firstItem="Vxm-NB-pA2" firstAttribute="leading" secondItem="lsf-45-VF5" secondAttribute="leading" id="rMX-8H-sQ6"/>
+                            <constraint firstAttribute="trailing" secondItem="JsZ-Vx-rgu" secondAttribute="trailing" constant="8" id="uqw-z2-vZ8"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="244" height="94"/>
-            <point key="canvasLocation" x="287.02290076335879" y="35.211267605633807"/>
+            <constraints>
+                <constraint firstItem="lsf-45-VF5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Vla-dV-zy8"/>
+                <constraint firstItem="lsf-45-VF5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="cK4-Cy-5wI"/>
+                <constraint firstAttribute="trailing" secondItem="lsf-45-VF5" secondAttribute="trailing" id="iwW-Ue-3NC"/>
+                <constraint firstAttribute="bottom" secondItem="lsf-45-VF5" secondAttribute="bottom" id="t4Q-Z8-DJe"/>
+            </constraints>
+            <size key="customSize" width="110" height="119"/>
+            <connections>
+                <outlet property="durationLabel" destination="JsZ-Vx-rgu" id="iec-JU-7El"/>
+                <outlet property="editButton" destination="gLl-vS-ehx" id="klf-I1-6eK"/>
+                <outlet property="tagLabel" destination="3wJ-Pi-tgO" id="6gF-W5-98O"/>
+                <outlet property="thumbnailImageView" destination="Vxm-NB-pA2" id="U3d-JZ-BCX"/>
+            </connections>
+            <point key="canvasLocation" x="-187.78625954198472" y="41.197183098591552"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
