--- a/voiceraFace/RecordingGridView/View/RecordingGridViewController.xib
+++ b/voiceraFace/RecordingGridView/View/RecordingGridViewController.xib
@@ -1,22 +1,97 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RecordingGridViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RecordingGridViewController" customModule="voiceraFace" customModuleProvider="target">
             <connections>
+                <outlet property="closeButton" destination="eQP-o2-gIV" id="84p-g1-6N0"/>
+                <outlet property="collectionView" destination="mPm-wp-xbE" id="iow-KI-DqH"/>
+                <outlet property="recordNewVideoButton" destination="O1Y-LF-pfv" id="CL7-Kl-E2g"/>
+                <outlet property="titleLabel" destination="Qhn-ci-mVy" id="X3x-hX-ep4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="mPm-wp-xbE">
+                    <rect key="frame" x="0.0" y="94" width="393" height="684"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TD2-Le-71t">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recordings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qhn-ci-mVy">
+                    <rect key="frame" x="0.0" y="59" width="393" height="35"/>
+                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="35" id="UTd-gs-ddf"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O1Y-LF-pfv">
+                    <rect key="frame" x="16" y="778" width="175.66666666666666" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="Nga-74-esd"/>
+                    </constraints>
+                    <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Record New Video"/>
+                    <connections>
+                        <action selector="recordNewVideoButtontapped:" destination="-1" eventType="touchUpInside" id="8V2-hb-BSp"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eQP-o2-gIV">
+                    <rect key="frame" x="201.66666666666663" y="778" width="175.33333333333337" height="40"/>
+                    <color key="backgroundColor" systemColor="systemRedColor"/>
+                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Close"/>
+                    <connections>
+                        <action selector="closeButtontapped:" destination="-1" eventType="touchUpInside" id="zA4-A8-miy"/>
+                    </connections>
+                </button>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Qhn-ci-mVy" secondAttribute="trailing" id="0x8-qe-9Xm"/>
+                <constraint firstAttribute="trailing" secondItem="mPm-wp-xbE" secondAttribute="trailing" id="1Ib-s1-Hza"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eQP-o2-gIV" secondAttribute="bottom" id="3gY-4u-RV5"/>
+                <constraint firstItem="mPm-wp-xbE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4NQ-yt-aFi"/>
+                <constraint firstItem="O1Y-LF-pfv" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="6dX-O5-Qgz"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eQP-o2-gIV" secondAttribute="trailing" constant="16" id="Niz-BS-hVa"/>
+                <constraint firstItem="eQP-o2-gIV" firstAttribute="width" secondItem="O1Y-LF-pfv" secondAttribute="width" id="Zuw-hr-b11"/>
+                <constraint firstItem="O1Y-LF-pfv" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="aCB-bD-bdE"/>
+                <constraint firstItem="Qhn-ci-mVy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="i5k-N0-TCM"/>
+                <constraint firstItem="eQP-o2-gIV" firstAttribute="top" secondItem="mPm-wp-xbE" secondAttribute="bottom" id="iaA-YO-gb3"/>
+                <constraint firstItem="mPm-wp-xbE" firstAttribute="top" secondItem="Qhn-ci-mVy" secondAttribute="bottom" id="kAp-Zl-zUl"/>
+                <constraint firstItem="eQP-o2-gIV" firstAttribute="leading" secondItem="O1Y-LF-pfv" secondAttribute="trailing" constant="10" id="kMr-0f-6Mz"/>
+                <constraint firstItem="Qhn-ci-mVy" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="rwl-3h-8P4"/>
+                <constraint firstItem="O1Y-LF-pfv" firstAttribute="top" secondItem="mPm-wp-xbE" secondAttribute="bottom" id="zcI-ve-RfJ"/>
+            </constraints>
+            <point key="canvasLocation" x="32.824427480916029" y="170.42253521126761"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
